# dungeon-depths-3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: base.frag  base.vert  crosshair.vert  debug.frag  debug.vert  shadow.frag  tile.frag  tile.vert  ui.frag  ui.vert
assets/textures/: developerNote_dobo_ui.txt
include/audio/: AudioManager.h
include/enemies/: BossBehavior.h  ChargerBehavior.h  ChaserBehavior.h  Enemy.h  EnemyManager.h  EnemyProjectileManager.h  IEnemyBehavior.h  ShooterBehavior.h
include/engine/: Camera.h  Collider.h  DebugRenderer.h  GameObject.h  InputManager.h  ItemType.h  Shader.h  ShaderProgram.h  Transform.h
include/game/: Game.h  Level.h
include/player/: Inventory.h  Item.h  ItemManager.h  Player.h  PlayerController.h  Projectile.h  ProjectileManager.h
include/render/: Camera2D.h  Camera3D.h  Light.h  MapCamera.h  Material.h  MeshBuilder.h  Model.h  ShadowMap.h  Texture2D.h  TileBatch.h  TileColors.h  TileCoordinates.h  TileRenderer.h
include/ui/: InventoryUI.h  MenuUI.h  UIBatch.h
include/world/: Corridor.h  Door.h  Dungeon.h  DungeonConsoleTest.h  DungeonGenerator.h  DungeonLayoutBuilder.h  DungeonPrinter.h  DungeonTypes.h  GridCell.h  Room.h  TileMap.h  TileMapPrinter.h
src/: main.cpp
src/audio/: AudioManager.cpp
src/enemies/: BossBehavior.cpp  ChargerBehavior.cpp  ChaserBehavior.cpp  Enemy.cpp  EnemyManager.cpp  EnemyProjectileManager.cpp  ShooterBehavior.cpp
src/engine/: Camera.cpp  Collider.cpp  DebugRenderer.cpp  GameObject.cpp  InputManager.cpp  Shader.cpp  ShaderProgram.cpp  Transform.cpp
(+43 files in other folders)
